# wordle-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
wordle_cli/: __init__.py
