[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "wordle-cli"
version = "0.1.0"
description = "A CLI tool that allows you to play Wordle in your terminal"
authors = [
    {name = "Zwhan15", email = "duongthaihan15@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich",
]

[project.scripts]
wordle = "wordle_cli:cli"

[tool.setuptools]
py-modules = ["wordle"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["wordle_cli*"]

[tool.setuptools.package-data]
wordle_cli = ["*.txt"]
